fixed health check endpoints and added documentation and postmancollection